@@ -1,5 +1,11 @@
 2002-09-25  Nathanael Nerode  <neroden@gcc.gnu.org>
 
+	* Makefile.tpl: Make subsituted variables more autoconfy.
+	* Makefile.in: Regenerate.
+	* configure: Make seds more autoconfy.
+
+2002-09-25  Nathanael Nerode  <neroden@gcc.gnu.org>
+
 	* Makefile.tpl: Rewrite substituted lines to look autoconfy.
 	* Makefile.in: Regenerate.
 	* configure.in: Rewrite sed statements to look autoconfy.
